--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cypress-recorder",
-  "version": "0.8.6",
+  "version": "0.9.0",
   "description": "A browser extension that generates Cypress, Playwright and Puppeteer scripts automatically from your browser interactions.",
   "license": "Apache-2.0",
   "scripts": {
@@ -13,66 +13,62 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hot-loader/react-dom": "^17.0.1",
-    "@types/chrome": "^0.0.154",
-    "@types/firefox": "^0.0.31",
+    "@types/chrome": "^0.0.262",
+    "@types/firefox": "^0.0.34",
     "@types/lodash.debounce": "^4.0.6",
-    "@types/react": "^17.0.2",
+    "@types/react": "^18.2.64",
     "@types/react-copy-to-clipboard": "^5.0.1",
-    "@types/react-dom": "^17.0.1",
+    "@types/react-dom": "^18.2.21",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
-    "react": "^17.0.1",
+    "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.2.0",
     "react-hot-loader": "^4.13.0",
     "react-syntax-highlighter": "^15.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
-    "@babel/plugin-proposal-class-properties": "^7.12.13",
     "@babel/preset-env": "^7.12.17",
     "@babel/preset-react": "^7.12.13",
-    "@types/jest": "^27.0.2",
     "@types/lodash.throttle": "^4.1.6",
-    "@types/react-syntax-highlighter": "^13.5.2",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^9.1.3",
     "babel-preset-react-app": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^12.0.0",
-    "css-loader": "^5.0.2",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.10.0",
     "cypress": "^13.6.6",
-    "eslint": "^7.20.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.2.2",
+    "eslint": "^8.57.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
-    "fs-extra": "^9.1.0",
-    "html-loader": "^2.1.0",
+    "fs-extra": "^11.2.0",
+    "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.2.0",
-    "husky": "^7.0.4",
-    "jest": "^27.3.1",
-    "lint-staged": "^12.3.7",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "loader": "^2.1.1",
     "playwright": "^1.16.3",
-    "prettier": "^2.2.1",
-    "source-map-loader": "^2.0.1",
-    "style-loader": "^2.0.0",
+    "prettier": "^3.2.5",
+    "source-map-loader": "^5.0.0",
+    "style-loader": "^3.3.4",
     "terser-webpack-plugin": "^5.1.1",
     "to-string": "^0.2.0",
-    "ts-jest": "^27.0.7",
-    "ts-loader": "^8.0.17",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.7.0",
-    "typescript": "^5.0.0",
-    "webpack": "^5.49.0",
-    "webpack-cli": "^5.1.4",
+    "typescript": "^5.4.2",
+    "webpack": "5.90.3",
+    "webpack-cli": "5.1.4",
     "webpack-dev-server": "^5.0.2"
   },
   "files": [
